err/wsman.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wsman'...
Listing './lib/python3.5/site-packages/wsman/cache'...
Compiling './lib/python3.5/site-packages/wsman/cache/__init__.py'...
***   File "./lib/python3.5/site-packages/wsman/cache/__init__.py", line 46
    print "ERROR importing _threa", sys.exc_info()
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wsman/filter'...
Listing './lib/python3.5/site-packages/wsman/format'...
Listing './lib/python3.5/site-packages/wsman/loghandlers'...
Listing './lib/python3.5/site-packages/wsman/loghandlers/templates'...
Listing './lib/python3.5/site-packages/wsman/mixin'...
Listing './lib/python3.5/site-packages/wsman/parsers'...
Listing './lib/python3.5/site-packages/wsman/provider'...
Compiling './lib/python3.5/site-packages/wsman/provider/remote.py'...
***   File "./lib/python3.5/site-packages/wsman/provider/remote.py", line 70
    print remote.ip, remote.username, remote.password
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wsman/response'...
Compiling './lib/python3.5/site-packages/wsman/response/association.py'...
***   File "./lib/python3.5/site-packages/wsman/response/association.py", line 99
    print "Wrong type for key ", my_key, " expected Reference"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wsman/response/reference.py'...
***   File "./lib/python3.5/site-packages/wsman/response/reference.py", line 91
    print "Reference Key ", my_key, " not equal", my_value, " - ", other_value
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wsman/test_cache.py'...
***   File "./lib/python3.5/site-packages/wsman/test_cache.py", line 28
    print number * 5 + second
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wsman/transport'...
Listing './lib/python3.5/site-packages/wsman/transport/dummy'...
Compiling './lib/python3.5/site-packages/wsman/transport/dummy/__init__.py'...
***   File "./lib/python3.5/site-packages/wsman/transport/dummy/__init__.py", line 68
    print path
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wsman/transport/dummy/responses'...
Listing './lib/python3.5/site-packages/wsman/transport/dummy/responses/winrm'...
Listing './lib/python3.5/site-packages/wsman/transport/dummy/responses/wsmancli'...
Listing './lib/python3.5/site-packages/wsman/transport/process'...
Compiling './lib/python3.5/site-packages/wsman/transport/process/_subprocess.py'...
***   File "./lib/python3.5/site-packages/wsman/transport/process/_subprocess.py", line 57
    except (subprocess.pywintypes.error, Exception), why:
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wsman-0.9.27.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
